@@ -12,7 +12,7 @@ PDPATH=/usr/src/pd-0.37-0/src
 
 # where is the SndObj include directory?
 # (leave blank or comment out to disable SndObj support)
-SNDOBJ=/usr/local/include/SndObj
+SNDOBJ=/usr/local/include #/SndObj
 
 # where is the STK include directory?
 # (leave blank or comment out to disable STK support)
@@ -30,6 +30,3 @@ INSTDIR=/usr/local/lib/pd/flext
 # UFLAGS=-mcpu=pentiumpro # gcc 2.95
 # UFLAGS=-mcpu=pentium3 -msse  # gcc 3.2
 
-# define to use old library naming for backwards compatibility (to externals depending on flext versions < 0.5) 
-# ("flext.a" instead of new "libflext.a" etc.)
-V4_NAMING=1
