@@ -3,7 +3,7 @@
 #
 
 # your c++ compiler (if not g++)
-# CXX=g++
+#CXX=g++
 
 # where does the PD installation reside?
 PD=/usr/local/lib/pd
@@ -29,9 +29,9 @@ HELPDIR=${PD}/doc/5.reference
 
 # additional compiler flags
 # (check whether they fit to your system!)
-UFLAGS=-mcpu=pentiumpro  # gcc 2.95
-# UFLAGS=-mcpu=pentium3 -msse -mfpmath=sse  # gcc 3.2 
+#UFLAGS=-mcpu=pentiumpro -funroll-loops -fmove-all-movables -frerun-loop-opt -finline-functions -fno-rtti -fno-exceptions # gcc 2.95
+#UFLAGS=-mcpu=pentium3 -msse -mfpmath=sse  -funroll-loops -fmove-all-movables -frerun-loop-opt -finline-functions -fno-rtti -fno-exceptions # gcc 3.2 
 
 # define to link against shared flext library (flext version >= 0.5.0)
-# FLEXT_SHARED=1
+#FLEXT_SHARED=1
 
